# btest-rs

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.cross  Dockerfile.static  KNOWN_ISSUES.md  LICENSE  README.md  docker-compose.yml  server_results.csv
.gitea/workflows/: ci.yml  release.yml
deploy/: syslog-ng-btest.conf
deploy/alpine/: APKBUILD  btest.initd  test-alpine.sh
deploy/aur/: .SRCINFO  PKGBUILD  test-aur.sh
deploy/deb/: build-deb.sh  test-deb.sh
deploy/openwrt/: Makefile  build-ipk.sh
deploy/openwrt/files/: btest.config  btest.init
deploy/rpm/: btest-rs.spec  build-rpm.sh  test-rpm.sh
docs/: architecture.md  docker.md  ecsrp5-research.md  protocol.md  user-guide.md
docs/man/: btest.1
proto-test/: btest_mitm_full.py
scripts/: build-linux.sh  build-macos-release.sh  debug-capture.sh  install-service.sh  push-docker-all.sh  push-docker.sh  sync-github-release.sh  test-aur-remote.sh  test-docker.sh  test-local.sh  test-mikrotik.sh
src/: auth.rs  bandwidth.rs  client.rs  cpu.rs  csv_output.rs  ecsrp5.rs  lib.rs  main.rs  protocol.rs  server.rs  syslog_logger.rs
src/server_pro/: enforcer.rs  ldap_auth.rs  main.rs  quota.rs  server_loop.rs  user_db.rs
src/server_pro/web/: mod.rs
src/server_pro/web/templates/: dashboard.html  index.html
tests/: ecsrp5_test.rs  full_integration_test.rs  integration_test.rs
